--- a/examples/minimap_ml.html
+++ b/examples/minimap_ml.html
@@ -12,22 +12,10 @@
     let container, scene, camera, renderer, display, rayMeshes, planeMesh, containerMesh;
     let intersectScene, intersectCamera, renderTarget, terrainMeshes;
     let mesher = null;
-
-    /* const controllerGeometry = new THREE.BoxBufferGeometry(0.1, 0.2, 0.01);
-    const controllerMaterial = new THREE.MeshPhongMaterial({
-      color: 0x4caf50,
-    });
-    const _makeControllerMesh = (x = 0, y = 0, z = 0, qx = 0, qy = 0, qz = 0, qw = 1) => {
-      const mesh = new THREE.Mesh(controllerGeometry, controllerMaterial);
-      mesh.position.set(x, y, z);
-      mesh.quaternion.set(qx, qy, qz, qw);
-      // mesh.matrix.compose(mesh.position, mesh.quaternion, mesh.scale);
-      mesh.updateMatrix();
-      mesh.updateMatrixWorld();
-      mesh.matrixAutoUpdate = false;
-      mesh.frustumCulled = false;
-      return mesh;
-    }; */
+    const controllerMeshes = [
+      // _makeControllerMesh(-0.1),
+      // _makeControllerMesh(0.1),
+    ];
 
     function init() {
       container = document.createElement('div');
@@ -71,6 +59,35 @@
         mesh.frustumCulled = false;
         scene.add(mesh);
       })(); */
+
+      const controllerGeometry = new THREE.BoxBufferGeometry(0.1, 0.2, 0.01);
+      const controllerMaterial = new THREE.MeshPhongMaterial({
+        color: 0xFF0000,
+      });
+      for (let i = 0; i < 2; i++) {
+        const controllerMesh = new THREE.Mesh(controllerGeometry, controllerMaterial);
+        controllerMesh.position.set(i === 0 ? -0.1 : 0.1, 0, -0.1);
+        controllerMesh.quaternion.setFromUnitVectors(
+          new THREE.Vector3(0, 0, -1),
+          new THREE.Vector3(0, -1, -1)
+        );
+        controllerMesh.updateMatrixWorld();
+        controllerMesh.matrixAutoUpdate = false;
+        controllerMesh.frustumCulled = false;
+
+        scene.add(controllerMesh);
+        controllerMeshes[i] = controllerMesh;
+      }
+
+      const testMesh = new THREE.Mesh(
+        new THREE.BoxBufferGeometry(1, 1, 1),
+        new THREE.MeshPhongMaterial({
+          color: 0xFFFF00,
+        })
+      );
+      testMesh.position.z = -3;
+      testMesh.frustumCulled = false;
+      scene.add(testMesh);
 
       const _makeRayMesh = () => {
         const rayGeometry = new THREE.CylinderBufferGeometry(0.005, 0.005, 1, 3, 1)
@@ -286,7 +303,9 @@
         );
         // planeMesh.position.z = -1;
         // planeMesh.updateMatrixWorld();
-        // planeMesh.matrixAutoUpdate = false;
+        planeMesh.matrixAutoUpdate = false;
+        // planeMesh.updateMatrixWorld();
+        planeMesh.matrixWorldNeedsUpdate = true;
         planeMesh.frustumCulled = false;
         scene.add(planeMesh);
 
@@ -319,10 +338,16 @@
           const inputSource = inputSources[i];
           const pose = frame.getInputPose(inputSource);
 
-          /* const rayMesh = rayMeshes[i];
-          rayMesh.matrix.fromArray(pose.pointerMatrix);
-          rayMesh.matrix.decompose(localVector, localQuaternion, localVector2);
-          rayMesh.updateMatrixWorld(true); */
+          const controllerMesh = controllerMeshes[i];
+          controllerMesh.matrix.fromArray(pose.pointerMatrix);
+          // controllerMesh.updateMatrixWorld();
+          controllerMesh.matrixWorldNeedsUpdate = true;
+          // controllerMesh.matrixWorld.multiplyMatrices(controllerMesh.parent.matrixWorld, controllerMesh.matrix);
+          // controllerMesh.matrixWorld.fromArray(pose.pointerMatrix);
+          // controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
+          // controllerMesh.updateMatrixWorld(true);
+
+          // console.log('controller position', controllerMesh.position.toArray().join(','));
 
           if (i === 0) { // left
             intersectCamera.matrix.fromArray(pose.pointerMatrix);
@@ -332,8 +357,9 @@
 
             if (planeMesh.visible) {
               planeMesh.matrix.fromArray(pose.pointerMatrix);
-              planeMesh.matrix.decompose(planeMesh.position, planeMesh.quaternion, planeMesh.scale);
-              planeMesh.updateMatrixWorld(true);
+              planeMesh.matrixWorldNeedsUpdate = true;
+              // planeMesh.matrix.decompose(planeMesh.position, planeMesh.quaternion, planeMesh.scale);
+              // planeMesh.updateMatrixWorld(true);
             } else {
               containerMesh.matrix.fromArray(pose.pointerMatrix);
               containerMesh.matrix.decompose(containerMesh.position, containerMesh.quaternion, containerMesh.scale);
@@ -344,7 +370,7 @@
               containerMesh.quaternion.setFromEuler(localEuler);
               containerMesh.scale.set(0.05, 0.05, 0.05);
               containerMesh.matrix.compose(containerMesh.position, containerMesh.quaternion, containerMesh.scale);
-              containerMesh.updateMatrixWorld(true);
+              // containerMesh.updateMatrixWorld(true);
             }
           }
         }
@@ -409,6 +435,7 @@
         console.log('request session');
         const session = await display.requestSession({
           exclusive: true,
+          // xrOffset: window.document.xrOffset,
         });
         display.session = session;
 
