Re-add three.js tab= url identification query string

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <body>
-    <script src="three.js"></script>
+    <script src="three.js?tab=top"></script>
     <script src="fakeDisplay.js"></script>
     <script src="keycode.js"></script>
     <script src="svg-boundings.js"></script>
