--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1557,6 +1557,8 @@ const _bootFakeDisplay = async () => {
 
   display = fakeDisplay;
 
+  _openUrl('realitytab.html'); // XXX
+
   console.log('loaded root in 2D');
 };
 if (navigator.xr && !query.fake) {
@@ -1599,6 +1601,8 @@ if (navigator.xr && !query.fake) {
         renderer.vr.enabled = true;
         renderer.vr.setDevice(display);
         renderer.vr.setAnimationLoop(animate);
+
+        _openUrl('realitytab.html'); // XXX
 
         console.log('loaded root in XR');
       });
