Clean up reality tabs example load messages

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -140,10 +140,10 @@ const _openUrl = (u, position = new THREE.Vector3(), rotation = new THREE.Quater
   }
 
   const _drawOk = () => {
-    console.log('Load ok: ' + u);
+    console.log('reality tab load ok: ' + u);
   };
   const _drawFail = () => {
-    console.log('Load error: ' + u);
+    console.log('reality tab load error: ' + u);
   };
 
   const iframe = document.createElement('iframe');
