Add more reality tabs examples to the list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -10,8 +10,20 @@ let display, fakeDisplay, tabs = [], lastPresseds = [false, false];
 
 const links = [
   {
+    name: 'Hello, Magic Leap!',
+    url: 'hello_ml.html',
+  },
+  {
     name: 'Minimap',
     url: 'minimap_ml.html',
+  },
+  {
+    name: 'Shooter',
+    url: 'shooter_ml.html',
+  },
+  {
+    name: 'Hands',
+    url: 'hands_ml.html',
   },
 ];
 const RAY_COLOR = 0x44c2ff;
