Add new meshing example to reality tabs examples list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -14,6 +14,10 @@ const links = [
     url: 'hello_ml.html',
   },
   {
+    name: 'Meshing',
+    url: 'meshing_ml.html',
+  },
+  {
     name: 'Minimap',
     url: 'minimap_ml.html',
   },
