Add microphone example to reality tabs example links list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -29,6 +29,10 @@ const links = [
     name: 'Hands',
     url: 'hands_ml.html',
   },
+  {
+    name: 'Microphone',
+    url: 'microphone.html',
+  },
 ];
 const RAY_COLOR = 0x44c2ff;
 const RAY_HIGHLIGHT_COLOR = new THREE.Color(RAY_COLOR).multiplyScalar(0.5).getHex();
