--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -30,6 +30,10 @@ const links = [
     url: 'hands_ml.html',
   },
   {
+    name: 'Image tracking',
+    url: 'imagetracking_ml.html',
+  },
+  {
     name: 'Microphone',
     url: 'microphone.html',
   },
