Small reality tabs example cleanup

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -633,7 +633,7 @@ const _makeRig = () => {
 
               ctx.fillStyle = '#FFFFFF';
               ctx.fillRect(0, y, menuWidth*0.8 - 5, menuHeight);
-              ctx.fillRect(menuWidth*0.8, y, menuHeight*3, menuHeight);
+              ctx.fillRect(menuWidth*0.8, y, menuWidth*0.18, menuHeight);
 
               ctx.fillStyle = '#000000';
               ctx.fillText(url, 50, y + menuHeight/2 + 20);
