Clean up reality tabs intersection factor filtering conditions

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1063,7 +1063,7 @@ function animate(time, frame) {
             const yFactor = leftIntersectionPoint.distanceTo(keyboardMesh.leftLine.start) / (keyboardHeight / keyboardWidth);
             const distance = controllerMesh.ray.origin.distanceTo(intersectionPoint);
 
-            if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < rayDistance) {
+            if (xFactor > 0 && xFactor < 1 && yFactor > 0 && yFactor < 1 && distance < rayDistance) {
               const x = xFactor * keyboardWidth;
               const y = yFactor * keyboardHeight;
 
@@ -1141,7 +1141,7 @@ function animate(time, frame) {
             const yFactor = leftIntersectionPoint.distanceTo(menuMesh.urlMesh.leftLine.start) / menuWorldHeight;
             const distance = controllerMesh.ray.origin.distanceTo(intersectionPoint);
 
-            if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < rayDistance) {
+            if (xFactor > 0 && xFactor < 1 && yFactor > 0 && yFactor < 1 && distance < rayDistance) {
               const x = xFactor * menuWidth;
               const y = yFactor * menuHeight;
 
@@ -1214,7 +1214,7 @@ function animate(time, frame) {
             const yFactor = leftIntersectionPoint.distanceTo(menuMesh.optionsMesh.leftLine.start) / menuWorldHeight;
             const distance = controllerMesh.ray.origin.distanceTo(intersectionPoint);
 
-            if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < rayDistance) {
+            if (xFactor > 0 && xFactor < 1 && yFactor > 0 && yFactor < 1 && distance < rayDistance) {
               const x = xFactor * menuWidth;
               const y = yFactor * menuHeight;
 
