--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -34,6 +34,10 @@ const links = [
     url: 'imagetracking_ml.html',
   },
   {
+    name: 'Pathfinding',
+    url: 'pathfinding_ml.html',
+  },
+  {
     name: 'Microphone',
     url: 'microphone.html',
   },
